--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,21 +1,86 @@
+/* soft reset do css */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+/*monta imagem do fundo, tamanho da imagem, estilo da fonte e tamanho, inclusive das fontes do menu */
+
 body {
-    background-image: url(img/sky.jpg);
+    background-image: url(img/sky2.jpg);
     background-size: auto 100vh;
-    font-family: Arial;
+    font-family: 'Source Code Pro', monospace;
     height: 100vh;
+    font-size: 12px;
+}
+
+
+/* se a tela tiver pelo menos 400px vai carregar estes estilos */
+
+@media (min-width: 400px) {
+    body {
+        font-size: 14px;
+    }
+}
+
+
+/* breakpoint */
+
+@media (min-width: 600px) {
+    body {
+        background-attachment: fixed;
+        background-size: cover;
+        font-size: 18px;
+    }
+}
+
+
+/* breakpoint */
+
+@media (min-width: 1200px) {
+    body {
+        font-size: 20px;
+    }
+}
+
+header {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .menu {
     background-color: white;
+    /*fixo o menu, ao rolar a tela o menu acompanha */
+    position: fixed;
+    width: 100vw;
+    top: 0;
+    z-index: 1;
 }
 
 .menu ul {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .menu li {
     list-style: none;
+}
+
+.menu a {
+    display: block;
+    padding: 10px 20px;
+    transition: background-color 1s, color 1s;
+}
+
+.menu a:active,
+.menu a:hover {
+    background-color: teal;
+    color: white;
 }
 
 a {
@@ -27,12 +92,208 @@ a:hover {
     text-decoration: underline;
 }
 
+.titulo {
+    transform: scale(0.2) translateY(50vh);
+    opacity: 0;
+    animation: 1s ease 500ms animacaoTitulo forwards;
+}
+
+@keyframes animacaoTitulo {
+    from {
+        transform: scale(0.2) translateY(50vh);
+        opacity: 0;
+    }
+    to {
+        transform: scale(1) translateY(0);
+        opacity: 1;
+    }
+}
+
 .site-subtitle,
 .site-title {
     color: whitesmoke;
     text-align: center;
 }
 
+.site-title {
+    font-size: 4em;
+    font-family: 'Baloo Chettan 2', cursive;
+}
+
 .site-subtitle {
     font-style: italic;
+    font-family: 'Source Code Pro', monospace;
+    line-height: 2.0em;
+}
+
+.sobre,
+.contato,
+.portfolio {
+    padding: 2em;
+    min-height: 100vh;
+}
+
+
+/*deixando a caixa sobre centralizada*/
+
+@media (min-width: 1200px) {
+    .container {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1200px;
+    }
+}
+
+.sobre h2,
+.contato h2,
+.portfolio h2 {
+    font-family: 'Press Start 2P', cursive;
+    color: whitesmoke;
+    margin-bottom: 1.5em;
+    font-size: 2em;
+}
+
+.sobre p {
+    color: white;
+    text-indent: 1.4em;
+    margin-bottom: 1.4em;
+    text-align: justify;
+}
+
+
+/* link da alura */
+
+.sobre a {
+    color: white;
+    text-decoration: underline;
+}
+
+.sobre a:hover {
+    background-color: cyan;
+    text-decoration: none;
+    color: magenta;
+}
+
+
+/* ajuste da imagem junto ao texto */
+
+.sobre .avatar {
+    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    margin-left: 2em;
+}
+
+
+/*clip path = função que monta os cortes/formato da imagem*/
+
+
+/*bennettfeely.com/clippy monta as forma das figuras*/
+
+@media (min-width: 600px) {
+    .sobre .avatar {
+        clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
+        float: right;
+    }
+}
+
+
+/*propriedade grid e flex são para criar colunas*/
+
+.portfolio .grid {
+    display: grid;
+    gap: 2em;
+}
+
+@media (min-width: 560px) {
+    .portfolio .grid {
+        grid-template-columns: 240px 240px;
+    }
+}
+
+@media (min-width: 880px) {
+    .portfolio .grid {
+        grid-template-columns: repeat(3, 260px);
+        align-content: center;
+        justify-content: center;
+        height: calc(100vh - 8em - 48px);
+    }
+}
+
+.flip-card {
+    height: 180px;
+    perspective: 1000px;
+}
+
+.flip-card:hover .card {
+    transform: rotateY(180deg);
+}
+
+
+/*estilo 3d da transição  da imagem*/
+
+.card {
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 3s;
+}
+
+.card-front,
+.card-back {
+    backface-visibility: hidden;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+
+/*ajuste do rotacionamento das imagens imagens vão girar*/
+
+.card-back {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, .7);
+    height: 180px;
+    width: 100%;
+    /*rotaciona no eixo Y, podendo ser X e etc*/
+    transform: rotateY(180deg);
+}
+
+.portfolio figure {
+    text-align: center;
+}
+
+.img-portfolio {
+    height: 180px;
+    width: 100%;
+    object-fit: cover;
+    object-position: left bottom;
+    transition: transform 500ms;
+}
+
+
+/* .img-portfolio:hover {
+    transform: scale(1.2) rotate(-2deg);
+  } */
+
+.contato .icons {
+    text-align: center;
+}
+
+.contato a {
+    color: whitesmoke;
+    font-size: 4em;
+    transition: text-shadow 1s;
+}
+
+.contato a:active,
+.contato a:hover {
+    text-decoration: none;
+    text-shadow: 0px 0px 10px rgba(255, 255, 255, .5);
+}
+
+.home a {
+    color: whitesmoke;
+    font-size: 2em;
+    transition: text-shadow 1s;
 }
